# OpenGL-Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: app.h  bullet_utils.h  glfw_utils.h  shader_utils.h
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
lib/bullet3-master/: CMakeLists.txt
src/: app.cpp  bullet_utils.cpp  glfw_utils.cpp  main.cpp  shader_utils.cpp
